API v58.0/objects/Stock__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consignment_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consignment Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sr_No__c</fullName>
        <displayFormat>S-{0}</displayFormat>
        <label>Sr No.</label>
        <type>AutoNumber</type>
    </fields>
    <label>Stock</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Stock Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stocks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Stock_Name</fullName>
        <active>true</active>
        <errorConditionFormula>Len(Name) &lt; 3</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Please Enter Valid Stock Name</errorMessage>
    </validationRules>
</CustomObject>